Add login and change ico

--- a/come.html
+++ b/come.html
@@ -79,13 +79,18 @@
                         <form action="" role="form">
                             <label for="namep">Имя пользователя</label>
                             <div class="input-group">
-                                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-user"></i></span>
+                                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-font"></i></span>
                                 <input type="text" class="form-control" placeholder="введите имя пользователя" aria-describedby="sizing-addon2" id="namep">
                             </div>
                             <label for="surname">Фамилия пользователя</label>
                             <div class="input-group">
-                                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-user"></i></span>
+                                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-font"></i></span>
                                 <input type="text" class="form-control" placeholder="введите фамилию пользователя" aria-describedby="sizing-addon2" id="surname">
+                            </div>
+                            <label for="login">Логин пользователя</label>
+                            <div class="input-group">
+                                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-user"></i></span>
+                                <input type="text" class="form-control" placeholder="введите логин пользователя" aria-describedby="sizing-addon2" id="login">
                             </div>
                             <label for="mail">Адрес электронной почты</label>
                             <div class="input-group">
@@ -99,10 +104,10 @@
                             </div>
                             <label for="pasp">Пароль повторно</label>
                             <div class="input-group">
-                                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-lock"></i></span>
+                                <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-check"></i></span>
                                 <input type="password" class="form-control" placeholder="введите пароль повторно" aria-describedby="sizing-addon2" id="pasp">
                             </div>
-                            <button type="submit" class="btn"><i class="glyphicon glyphicon-ok"></i>Войти</button>
+                            <button type="submit" class="btn"><i class="glyphicon glyphicon-ok"></i>Зарегистрироваться</button>
                         </form>
                     </div>
                 </div>
