--- a/come.html
+++ b/come.html
@@ -11,49 +11,62 @@
 </head>
 <body>
     
-    <div class="container-fluid">
-        <div class="row">
-            <nav role="navigation" class="navbar navbar-inverse">
-                <div class="container header">
-                    <!-- button menu -->
-                    <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-                        <span class="sr-only">Navigation button</span>
-                        <span class="icon-bar"></span>  
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <!-- header name -->
-                    <div class="col-lg-4 col-md-6 col-sm-5 col-xs-6">
-                        <h1><a href="index.html"><b>САЙТ</b>САЙТ</a></h1>
-                    </div>
-                    <!-- form search -->
-                    <div class="col-lg-4">
-                        <form action="" role="search" class="pull-left form_search hidden-md hidden-sm hidden-xs">
-                            <div class="input-group">
-                                <input type="search" class="form-control input-lg" placeholder="Поиск">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        <div class="container-fluid">
+            <div class="row">
+                <nav role="navigation" class="navbar navbar-inverse">
+                    <div class="container header">
+                        <!-- button menu -->
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">Navigation button</span>
+                            <span class="icon-bar"></span>  
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <!-- header name -->
+                        <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6">
+                            <h1><a href="index.html"><b>САЙТ</b>САЙТ</a></h1>
+                        </div>
+                        <!-- form search -->
+                        <div class="col-lg-3">
+                            <form action="" role="search" class="pull-left form_search hidden-md hidden-sm hidden-xs">
+                                <div class="input-group">
+                                    <input type="search" class="form-control input-lg" placeholder="Поиск">
+                                    <div class="input-group-btn">
+                                        <button class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                    </div>
                                 </div>
+                            </form>
+                        </div>
+                        <!-- region button -->
+                        <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
+                            <div class="sel">
+                                <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
+                                    <option value="stock">Регион</option>
+                                    <option value="Bob">Бобруйск</option>
+                                    <option value="Bor">Борисов</option>
+                                    <option value="Gom">Гомель</option>
+                                    <option value="Min">Минск</option>
+                                </select>
                             </div>
-                        </form>
-                    </div>
-                    <!-- menu header -->
-                    <div class="col-lg-4 col-md-6 col-sm-7 col-xs-6 nav_menu">
-                        <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
-                            <ul class="nav nav-pills">
-                                <li><a href="index.html">Главная</a></li>
-                                <li><a href="#">Подать объявление</a></li>
-                                <li class="active"><a href="come.html">Войти</a></li>
-                            </ul>
+                        </div>
+                        <!-- menu header -->
+                        <div class="col-lg-4 col-md-5 col-sm-7 col-xs-6 nav_menu">
+                            <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
+                                <ul class="nav nav-pills">
+                                    <li class="active"><a href="index.html">Главная</a></li>
+                                    <li><a href="#">Подать объявление</a></li>
+                                    <li><a href="come.html">Войти</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
         </div>
-    </div>
 
     <div class="wrapper">
         <div class="container-fluid">
+            <!-- container reg/auth -->
             <div class="container come">
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#panel1">Вход</a></li>
