--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- header name -->
-                    <div class="col-lg-3 col-md-6 col-sm-5 col-xs-6">
+                    <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6">
                         <h1><a href="index.html"><b>САЙТ</b>САЙТ</a></h1>
                     </div>
                     <!-- form search -->
-                    <div class="col-lg-4">
+                    <div class="col-lg-3">
                         <form action="" role="search" class="pull-left form_search hidden-md hidden-sm hidden-xs">
                             <div class="input-group">
                                 <input type="search" class="form-control input-lg" placeholder="Поиск">
@@ -37,8 +37,20 @@
                             </div>
                         </form>
                     </div>
+                    <!-- region button -->
+                    <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
+                        <div class="sel">
+                            <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
+                                <option value="stock">Регион</option>
+                                <option value="Bob">Бобруйск</option>
+                                <option value="Bor">Борисов</option>
+                                <option value="Gom">Гомель</option>
+                                <option value="Min">Минск</option>
+                            </select>
+                        </div>
+                    </div>
                     <!-- menu header -->
-                    <div class="col-lg-5 col-md-6 col-sm-7 col-xs-6 nav_menu">
+                    <div class="col-lg-4 col-md-5 col-sm-7 col-xs-6 nav_menu">
                         <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                             <ul class="nav nav-pills">
                                 <li class="active"><a href="index.html">Главная</a></li>
@@ -55,7 +67,7 @@
     <div class="wrapper">
         <div class="container-fluid">
             <!-- form search -->
-            <form action="" role="search" class="visible-md visible-sm visible-xs">
+            <form action="" role="search" class="visible-md visible-sm visible-xs pull-left form_search_m">
                     <div class="input-group">
                         <input type="search" class="form-control input-lg" placeholder="Поиск">
                         <div class="input-group-btn">
@@ -63,6 +75,18 @@
                         </div>
                     </div>
             </form>
+            <!-- region button -->
+            <div class="visible-sm visible-xs pull-right region_s">
+                <div class="sel">
+                    <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
+                        <option value="stock">Регион</option>
+                        <option value="Bob">Бобруйск</option>
+                        <option value="Bor">Борисов</option>
+                        <option value="Gom">Гомель</option>
+                        <option value="Min">Минск</option>
+                    </select>
+                </div>
+            </div>
             <!-- indent -->
             <div class="clear"></div>
             <!-- left categories -->
@@ -145,14 +169,14 @@
                     <!-- block  selling new -->
                     <div class="list-group col-lg-5">
                         <li class="list-group-item list-group-item-new">
-                            <h3>Продам<span class="label label-default">Новинки</span></h3>
+                            <h3>Отдам<span class="label label-default">Новинки</span></h3>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
                                 <div class="img_block">
                                     <img src="assets/img/колеса.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Кросы</h4>
@@ -160,7 +184,7 @@
                                     <img src="assets/img/кросы.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
@@ -168,7 +192,7 @@
                                     <img src="assets/img/собака.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
@@ -176,7 +200,7 @@
                                     <img src="assets/img/колеса.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
@@ -184,14 +208,14 @@
                                     <img src="assets/img//собака.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>
                             </a>
                         </li>
                     </div>
                     <!-- block will give new  -->
                     <div class="list-group col-lg-5">
                         <li class="list-group-item list-group-item-new">
-                            <h3>Отдам<span class="label label-default">Новинки</span></h3>
+                            <h3>Продам<span class="label label-default">Новинки</span></h3>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
                                 <div class="img_block">
