Change group list item

--- a/index.html
+++ b/index.html
@@ -26,17 +26,6 @@
                     <div class="col-lg-3 col-md-4 col-sm-5 col-xs-6">
                         <h1><a href="index.html"><b>САЙТ</b>САЙТ</a></h1>
                     </div>
-                    <!-- form search -->
-                    <div class="col-lg-3">
-                        <form action="" role="search" class="pull-left form_search hidden-md hidden-sm hidden-xs">
-                            <div class="input-group">
-                                <input type="search" class="form-control input-lg" placeholder="Поиск">
-                                <div class="input-group-btn">
-                                    <button class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
                     <!-- region button -->
                     <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
                         <div class="sel">
@@ -48,6 +37,17 @@
                                 <option value="Min">Минск</option>
                             </select>
                         </div>
+                    </div>
+                    <!-- form search -->
+                    <div class="col-lg-3">
+                        <form action="" role="search" class="pull-left form_search hidden-md hidden-sm hidden-xs">
+                            <div class="input-group">
+                                <input type="search" class="form-control input-lg" placeholder="Поиск">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                     <!-- menu header -->
                     <div class="col-lg-4 col-md-5 col-sm-7 col-xs-6 nav_menu">
@@ -66,17 +66,8 @@
 
     <div class="wrapper">
         <div class="container-fluid">
-            <!-- form search -->
-            <form action="" role="search" class="visible-md visible-sm visible-xs pull-left form_search_m">
-                    <div class="input-group">
-                        <input type="search" class="form-control input-lg" placeholder="Поиск">
-                        <div class="input-group-btn">
-                            <button class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                        </div>
-                    </div>
-            </form>
             <!-- region button -->
-            <div class="visible-sm visible-xs pull-right region_s">
+            <div class="visible-sm visible-xs pull-left region_s">
                 <div class="sel">
                     <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
                         <option value="stock">Регион</option>
@@ -87,6 +78,15 @@
                     </select>
                 </div>
             </div>
+            <!-- form search -->
+            <form action="" role="search" class="visible-md visible-sm visible-xs pull-right form_search_m">
+                    <div class="input-group">
+                        <input type="search" class="form-control input-lg" placeholder="Поиск">
+                        <div class="input-group-btn">
+                            <button class="btn btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+            </form>
             <!-- indent -->
             <div class="clear"></div>
             <!-- left categories -->
@@ -173,10 +173,14 @@
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
                                 <div class="img_block">
-                                    <img src="assets/img/колеса.jpg" alt="Error">
+                                    <img src="assets/img/колеса.jpg" alt="Error" class="pull-left">
                                 </div>
                                 <span>12.02.19</span>
                                 <p class="list-group-item-text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                        описание описание описание
+                                </p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Кросы</h4>
@@ -184,7 +188,10 @@
                                     <img src="assets/img/кросы.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                        описание описание описание
+                                </p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
@@ -192,7 +199,10 @@
                                     <img src="assets/img/собака.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                        описание описание описание
+                                </p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
@@ -200,7 +210,10 @@
                                     <img src="assets/img/колеса.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                        описание описание описание
+                                </p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
@@ -208,7 +221,10 @@
                                     <img src="assets/img//собака.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                        описание описание описание
+                                </p>
                             </a>
                         </li>
                     </div>
@@ -223,6 +239,10 @@
                                 </div>
                                 <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
+                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                </p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Кросы</h4>
@@ -231,7 +251,10 @@
                                 </div>
                                 <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
-                            </a>
+                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
+                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                </p>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
                                 <div class="img_block">
@@ -239,6 +262,10 @@
                                 </div>
                                 <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
+                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                </p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
@@ -247,6 +274,10 @@
                                 </div>
                                 <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
+                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                </p>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
@@ -255,6 +286,10 @@
                                 </div>
                                 <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
+                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                        описание описание описание описание описание описание
+                                </p>
                             </a>
                         </li>
                     </div>
