--- a/index.html
+++ b/index.html
@@ -30,11 +30,119 @@
                     <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
                         <div class="sel">
                             <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
-                                <option value="stock">Регион</option>
-                                <option value="Bob">Бобруйск</option>
-                                <option value="Bor">Борисов</option>
-                                <option value="Gom">Гомель</option>
-                                <option value="Min">Минск</option>
+                                <option value="stock">Город</option>
+                                <option value="bobruisk">Бобруйск</option>
+                                <option value="baranovichi">Барановичи</option>
+                                <option value="borisov">Борисов</option>
+                                <option value="baran">Барань</option>
+                                <option value="beloozersk">Белоозерск</option>
+                                <option value="bereza">Береза</option>
+                                <option value="berezino">Березино</option>
+                                <option value="beerezovka">Березовка</option>
+                                <option value="braslav">Браслав</option>
+                                <option value="brest">Брест</option>
+                                <option value="bihov">Быхов</option>
+                                <option value="buda">Буда-Кошелево</option>
+                                <option value="vasilevichi">Василевичи</option>
+                                <option value="verchnedvinsk">Верхнедвинск</option>
+                                <option value="vetka">Ветка</option>
+                                <option value="vileila">Вилейка</option>
+                                <option value="vitebsk">Витебск</option>
+                                <option value="volkovisk">Волковыск</option>
+                                <option value="vologin">Воложин</option>
+                                <option value="visokoe">Высокое</option>
+                                <option value="ganzevichi">Ганцевичи</option>
+                                <option value="glubokoe">Глубокое</option>
+                                <option value="gomel">Гомель</option>
+                                <option value="gorki">Горки</option>
+                                <option value="gorodok">Городок</option>
+                                <option value="grodno">Гродно</option>
+                                <option value="davidgorodok">Давид-Городок</option>
+                                <option value="derginsk">Дзержинск</option>
+                                <option value="disna">Дисна</option>
+                                <option value="dobruh">Добруш</option>
+                                <option value="dokstizi">Докшицы</option>
+                                <option value="drogichin">Дрогичин</option>
+                                <option value="dubrovno">Дубровно</option>
+                                <option value="datlovo">Дятлово</option>
+                                <option value="elsk">Ельск</option>
+                                <option value="godino">Жодино</option>
+                                <option value="gabinka">Жабинка</option>
+                                <option value="gitkovichi">Житковичи</option>
+                                <option value="globin">Жлобин</option>
+                                <option value="zaslavl">Заславль</option>
+                                <option value="ivanovo">Иваново</option>
+                                <option value="ivazevichi">Ивацевичи</option>
+                                <option value="ive">Ивье</option>
+                                <option value="kalinlovichi">Калинковичи</option>
+                                <option value="kamenez">Каменец</option>
+                                <option value="kirowsk">Кировск</option>
+                                <option value="klezk">Клецк</option>
+                                <option value="klimovichi">Климовичи</option>
+                                <option value="klichev">Кличев</option>
+                                <option value="kobrin">Кобрин</option>
+                                <option value="kopil">Копыль</option>
+                                <option value="kossovo">Коссово</option>
+                                <option value="kastukovichi">Костюковичи</option>
+                                <option value="krichev">Кричев</option>
+                                <option value="krupki">Крупки</option>
+                                <option value="lupel">Лепель</option>
+                                <option value="lida">Лида</option>
+                                <option value="logoisk">Логойск</option>
+                                <option value="luninets">Лунинец</option>
+                                <option value="luban">Любань</option>
+                                <option value="lahovichi">Ляховичи</option>
+                                <option value="mozir">Мозырь</option>
+                                <option value="malorita">Малорита</option>
+                                <option value="marinagorka">Марьина Горка</option>
+                                <option value="mikahevichi">Микашевичи</option>
+                                <option value="minsk">Минск</option>
+                                <option value="miori">Миоры</option>
+                                <option value="mogilev">Могилев</option>
+                                <option value="molodechno">Молодечно</option>
+                                <option value="mosti">Мосты</option>
+                                <option value="mstislavl">Мстиславль</option>
+                                <option value="madel">Мядель</option>
+                                <option value="novopolozk">Новополоцк</option>
+                                <option value="narovla">Наровля</option>
+                                <option value="nesvich">Несвиж</option>
+                                <option value="novogrudoc">Новогрудок</option>
+                                <option value="novolukoml">Новолукомль</option>
+                                <option value="orsha">Орша</option>
+                                <option value="osipovichi">Осиповичи</option>
+                                <option value="ohmani">Ошмяны</option>
+                                <option value="pinsk">Пинск</option>
+                                <option value="polozk">Полоцк</option>
+                                <option value="petrikov">Петриков</option>
+                                <option value="postavi">Поставы</option>
+                                <option value="prugani">Пружаны</option>
+                                <option value="rechiza">Речица</option>
+                                <option value="rogachev">Рогачев</option>
+                                <option value="svetlogorsk">Светлогорск</option>
+                                <option value="svisloch">Свислочь</option>
+                                <option value="seno">Сенно</option>
+                                <option value="skidel">Скидель</option>
+                                <option value="slavgorod">Славгород</option>
+                                <option value="slonim">Слоним</option>
+                                <option value="sluzk">Слуцк</option>
+                                <option value="smolevichi">Смолевичи</option>
+                                <option value="smorgin">Сморгонь</option>
+                                <option value="soligorsk">Солигорск</option>
+                                <option value="stariedorogi">Старые Дороги</option>
+                                <option value="stolbzi">Столбцы</option>
+                                <option value="stolin">Столин</option>
+                                <option value="tolochin">Толочин</option>
+                                <option value="turov">Туров</option>
+                                <option value="uzda">Узда</option>
+                                <option value="fanipol">Фаниполь</option>
+                                <option value="hvoiniki">Хойники</option>
+                                <option value="hausi">Чаусы</option>
+                                <option value="hahniki">Чашники</option>
+                                <option value="cherven">Червень</option>
+                                <option value="chernikov">Чериков</option>
+                                <option value="chechersk">Чечерск</option>
+                                <option value="hklov">Шклов</option>
+                                <option value="huchin">Щучин</option>
                             </select>
                         </div>
                     </div>
@@ -70,11 +178,119 @@
             <div class="visible-sm visible-xs pull-left region_s">
                 <div class="sel">
                     <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
-                        <option value="stock">Регион</option>
-                        <option value="Bob">Бобруйск</option>
-                        <option value="Bor">Борисов</option>
-                        <option value="Gom">Гомель</option>
-                        <option value="Min">Минск</option>
+                        <option value="stock">Город</option>
+                        <option value="bobruisk">Бобруйск</option>
+                        <option value="baranovichi">Барановичи</option>
+                        <option value="borisov">Борисов</option>
+                        <option value="baran">Барань</option>
+                        <option value="beloozersk">Белоозерск</option>
+                        <option value="bereza">Береза</option>
+                        <option value="berezino">Березино</option>
+                        <option value="beerezovka">Березовка</option>
+                        <option value="braslav">Браслав</option>
+                        <option value="brest">Брест</option>
+                        <option value="bihov">Быхов</option>
+                        <option value="buda">Буда-Кошелево</option>
+                        <option value="vasilevichi">Василевичи</option>
+                        <option value="verchnedvinsk">Верхнедвинск</option>
+                        <option value="vetka">Ветка</option>
+                        <option value="vileila">Вилейка</option>
+                        <option value="vitebsk">Витебск</option>
+                        <option value="volkovisk">Волковыск</option>
+                        <option value="vologin">Воложин</option>
+                        <option value="visokoe">Высокое</option>
+                        <option value="ganzevichi">Ганцевичи</option>
+                        <option value="glubokoe">Глубокое</option>
+                        <option value="gomel">Гомель</option>
+                        <option value="gorki">Горки</option>
+                        <option value="gorodok">Городок</option>
+                        <option value="grodno">Гродно</option>
+                        <option value="davidgorodok">Давид-Городок</option>
+                        <option value="derginsk">Дзержинск</option>
+                        <option value="disna">Дисна</option>
+                        <option value="dobruh">Добруш</option>
+                        <option value="dokstizi">Докшицы</option>
+                        <option value="drogichin">Дрогичин</option>
+                        <option value="dubrovno">Дубровно</option>
+                        <option value="datlovo">Дятлово</option>
+                        <option value="elsk">Ельск</option>
+                        <option value="godino">Жодино</option>
+                        <option value="gabinka">Жабинка</option>
+                        <option value="gitkovichi">Житковичи</option>
+                        <option value="globin">Жлобин</option>
+                        <option value="zaslavl">Заславль</option>
+                        <option value="ivanovo">Иваново</option>
+                        <option value="ivazevichi">Ивацевичи</option>
+                        <option value="ive">Ивье</option>
+                        <option value="kalinlovichi">Калинковичи</option>
+                        <option value="kamenez">Каменец</option>
+                        <option value="kirowsk">Кировск</option>
+                        <option value="klezk">Клецк</option>
+                        <option value="klimovichi">Климовичи</option>
+                        <option value="klichev">Кличев</option>
+                        <option value="kobrin">Кобрин</option>
+                        <option value="kopil">Копыль</option>
+                        <option value="kossovo">Коссово</option>
+                        <option value="kastukovichi">Костюковичи</option>
+                        <option value="krichev">Кричев</option>
+                        <option value="krupki">Крупки</option>
+                        <option value="lupel">Лепель</option>
+                        <option value="lida">Лида</option>
+                        <option value="logoisk">Логойск</option>
+                        <option value="luninets">Лунинец</option>
+                        <option value="luban">Любань</option>
+                        <option value="lahovichi">Ляховичи</option>
+                        <option value="mozir">Мозырь</option>
+                        <option value="malorita">Малорита</option>
+                        <option value="marinagorka">Марьина Горка</option>
+                        <option value="mikahevichi">Микашевичи</option>
+                        <option value="minsk">Минск</option>
+                        <option value="miori">Миоры</option>
+                        <option value="mogilev">Могилев</option>
+                        <option value="molodechno">Молодечно</option>
+                        <option value="mosti">Мосты</option>
+                        <option value="mstislavl">Мстиславль</option>
+                        <option value="madel">Мядель</option>
+                        <option value="novopolozk">Новополоцк</option>
+                        <option value="narovla">Наровля</option>
+                        <option value="nesvich">Несвиж</option>
+                        <option value="novogrudoc">Новогрудок</option>
+                        <option value="novolukoml">Новолукомль</option>
+                        <option value="orsha">Орша</option>
+                        <option value="osipovichi">Осиповичи</option>
+                        <option value="ohmani">Ошмяны</option>
+                        <option value="pinsk">Пинск</option>
+                        <option value="polozk">Полоцк</option>
+                        <option value="petrikov">Петриков</option>
+                        <option value="postavi">Поставы</option>
+                        <option value="prugani">Пружаны</option>
+                        <option value="rechiza">Речица</option>
+                        <option value="rogachev">Рогачев</option>
+                        <option value="svetlogorsk">Светлогорск</option>
+                        <option value="svisloch">Свислочь</option>
+                        <option value="seno">Сенно</option>
+                        <option value="skidel">Скидель</option>
+                        <option value="slavgorod">Славгород</option>
+                        <option value="slonim">Слоним</option>
+                        <option value="sluzk">Слуцк</option>
+                        <option value="smolevichi">Смолевичи</option>
+                        <option value="smorgin">Сморгонь</option>
+                        <option value="soligorsk">Солигорск</option>
+                        <option value="stariedorogi">Старые Дороги</option>
+                        <option value="stolbzi">Столбцы</option>
+                        <option value="stolin">Столин</option>
+                        <option value="tolochin">Толочин</option>
+                        <option value="turov">Туров</option>
+                        <option value="uzda">Узда</option>
+                        <option value="fanipol">Фаниполь</option>
+                        <option value="hvoiniki">Хойники</option>
+                        <option value="hausi">Чаусы</option>
+                        <option value="hahniki">Чашники</option>
+                        <option value="cherven">Червень</option>
+                        <option value="chernikov">Чериков</option>
+                        <option value="chechersk">Чечерск</option>
+                        <option value="hklov">Шклов</option>
+                        <option value="huchin">Щучин</option>
                     </select>
                 </div>
             </div>
@@ -176,7 +392,7 @@
                                     <img src="assets/img/колеса.jpg" alt="Error" class="pull-left">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text title_text">Отдам в хорошие руки</p>
                                 <p class="list-group-item-text descript_text">Описание описание описание 
                                         описание описание описание описание описание описание
                                         описание описание описание
